--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ember-cli-sri": "^2.1.1",
     "ember-cli-template-lint": "^1.0.0-beta.1",
     "ember-cli-uglify": "^2.1.0",
+    "ember-cp-validations": "^4.0.0-beta.12",
     "ember-data": "~3.4.0",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.1.0",
