--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-resolver": "^5.0.1",
     "ember-source": "~3.4.0",
+    "ember-truth-helpers": "^3.0.0",
     "ember-welcome-page": "^3.2.0",
     "eslint-plugin-ember": "^5.2.0",
     "loader.js": "^4.7.0",
